# chip_8_emulator

./: README.md  emulator.c  emulator.h  graphic.c  graphic.h  main.c  main.h  meson.build
